# CacheSystem

./: CMakeLists.txt  main.cpp
cache_system/cache/: Cache.hpp
cache_system/eviction_policy/: EvictionPolicy.hpp  LRU.hpp
cache_system/exceptions/: Exceptions.hpp
cache_system/storage/: MapStorage.hpp  Storage.hpp
cache_system/utility/: DoublyLinkedList.hpp  Node.hpp
